Fixed the navbar cannot be fully displayed on mobile

--- a/src/assets/css/pages/header.scss
+++ b/src/assets/css/pages/header.scss
@@ -8,7 +8,6 @@
   z-index: 1;
   width: 100%;
   height: 70px;
-  min-width: 500px;
   background-color: white;
   border: {
     bottom: {
